tools: free up resources again